syntax = "proto3";

package admin.v1;

import "admin/v1/user_membership.proto";
import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/fzf-labs/ai-boilerplate-backend/api/admin/v1;v1";

//用户表
service User {
  //用户表-创建一条数据
  rpc CreateUser(CreateUserReq) returns (CreateUserReply) {
    option (google.api.http) = {
      post: "/admin/v1/user/create"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //用户表-更新一条数据
  rpc UpdateUser(UpdateUserReq) returns (UpdateUserReply) {
    option (google.api.http) = {
      post: "/admin/v1/user/update"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //用户表-更新状态
  rpc UpdateUserStatus(UpdateUserStatusReq) returns (UpdateUserStatusReply) {
    option (google.api.http) = {
      post: "/admin/v1/user/update/status"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //用户表-删除一条数据
  rpc DeleteUser(DeleteUserReq) returns (DeleteUserReply) {
    option (google.api.http) = {
      post: "/admin/v1/user/delete"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //用户表-单条数据查询
  rpc GetUserInfo(GetUserInfoReq) returns (GetUserInfoReply) {
    option (google.api.http) = {get: "/admin/v1/user/info"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //用户表-列表数据查询
  rpc GetUserList(GetUserListReq) returns (GetUserListReply) {
    option (google.api.http) = {get: "/admin/v1/user/list"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
}

//用户表信息
message UserInfo {
  string id = 1; // id
  string phone = 2; // 手机
  string nickname = 3; // 昵称
  int32 gender = 4; // 性别（0未知 1男 2女）
  string avatar = 5; // 头像
  string profile = 6; // 简介
  string wxGzhUserId = 7; // 公众号用户Id
  string wxGzhXcxId = 8; // 小程序用户Id
  int32 status = 9; // 状态
  string createdAt = 10; // 创建时间
  string updatedAt = 11; // 更新时间
  UserMembershipInfo userMembershipInfo = 12; // 用户会员关系表信息
}

//请求-用户表-创建一条数据
message CreateUserReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "phone",
        "status"
      ]
    }
  };
  string phone = 1 [(buf.validate.field).string = {min_len: 1}]; // 手机
  string nickname = 2 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {min_len: 1}
  ]; // 昵称
  int32 gender = 3 [(buf.validate.field).ignore = IGNORE_IF_UNPOPULATED]; // 性别（0未知 1男 2女）
  string avatar = 4 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {min_len: 1}
  ]; // 头像
  string profile = 5 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {min_len: 1}
  ]; // 简介
  int32 status = 6; // 状态
}

//响应-用户表-创建一条数据
message CreateUserReply {
  string id = 1; // id
}

//请求-用户表-更新一条数据
message UpdateUserReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };
  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // id
  string nickname = 2 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {min_len: 1}
  ]; // 昵称
  int32 gender = 3 [(buf.validate.field).ignore = IGNORE_IF_UNPOPULATED]; // 性别（0未知 1男 2女）
  string avatar = 4 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {min_len: 1}
  ]; // 头像
  string profile = 5 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {min_len: 1}
  ]; // 简介
  int32 status = 6; // 状态
}

//响应-用户表-更新一条数据
message UpdateUserReply {}

//请求-用户表-更新状态
message UpdateUserStatusReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "id",
        "status"
      ]
    }
  };
  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // id
  int32 status = 2; // 状态
}

//响应-用户表-更新状态
message UpdateUserStatusReply {}

//请求-用户表-删除一条数据
message DeleteUserReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };
  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // id
}

//响应-用户表-删除一条数据
message DeleteUserReply {}

//请求-用户表-单条数据查询
message GetUserInfoReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };
  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // id
}

//响应-用户表-单条数据查询
message GetUserInfoReply {
  UserInfo info = 1;
}

//请求-用户表-列表数据查询
message GetUserListReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "page",
        "pageSize"
      ]
    }
  };
  int32 page = 1 [(buf.validate.field).int32 = {gte: 1}]; //页码
  int32 pageSize = 2 [(buf.validate.field).int32 = {
    gte: 1
    lte: 1000
  }]; //页数
  string nickname = 3; // 昵称
  string phone = 4; // 手机
  int32 status = 5; // 状态
  repeated string createdAt = 6; // 创建时间
}

//响应-用户表-列表数据查询
message GetUserListReply {
  int32 total = 1; //总数
  repeated UserInfo list = 2; // 列表数据
}
